--- a/from.html
+++ b/from.html
@@ -36,7 +36,7 @@
                     <input type="text" id="department" name="department" required>
                     <label for="department">Username:</label>
                     <input type="text" id="department" name="department" required>
-                    <label for="department">Passworde:</label>
+                    <label for="department">Password:</label>
                     <input type="text" id="department" name="department" required>
                     <input type="submit" value="Register">
                 </form>
